<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
            
    <TextView
        android:id="@+id/dayViewHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|center_horizontal"
        android:text="@string/dayViewText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dayViewNote" />
    
    <TextView
        android:id="@+id/scheduleEventsHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/scheduledEvents"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/eventName" />
        
        <TextView
            android:layout_width="0dp" 
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numInv" />
        
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:text="@string/edit" />
                
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/del" />
    </LinearLayout>

    <ListView
        android:id="@+id/event_list"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp" >
    </ListView>
    
    <Button 
        android:id="@+id/addButton"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/newEvent" />

</LinearLayout>
