<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/search" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/allButton"
            android:layout_toRightOf="@id/textView1"
            android:hint="@string/searchHint" />



        <Button
            android:id="@+id/allButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/go" />

    </RelativeLayout>
    
   
   <com.google.android.gms.maps.MapView
    	android:id="@+id/map"
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="8"
    	android:clickable="true" />
   
   	<RelativeLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/latlong" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView2"/>


    </RelativeLayout>
    
     <Button
            android:id="@+id/calendarButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/submit" /> 
</LinearLayout>